--- a/index.html
+++ b/index.html
@@ -16,6 +16,65 @@
 
 
 <body>
+
+
+    <header class="header">
+        <div class="top-header">
+            <div class="container">
+                <div class="top-header-wrapper">
+                    <ul class="top-header-list">
+                        <li class="top-header-item"><a href="#" class="top-header-link">Сервис</a></li>
+                        <li class="top-header-item"><a href="#" class="top-header-link">Сотрудничество</a></li>
+                        <li class="top-header-item"><a href="#" class="top-header-link">Заказать звонок</a></li>
+                    </ul>
+                    <div class="top-header-social">
+                        <a href="#">
+                            <img src="./img/icon/viber.svg" alt="вайбер" class="header-social-icon" width="12"
+                                height="12">
+                        </a>
+                        <a href="#">
+                            <img src="./img/icon/whatsapp.svg" alt="вайбер" class="header-social-icon" width="12"
+                                height="12">
+                        </a>
+                        <a href="#">
+                            <img src="./img/icon/telegram.svg" alt="вайбер" class="header-social-icon" width="12"
+                                height="12">
+                        </a>
+                    </div>
+                    <a href="tel:88005055461" class="header-phone-link">+7 (800) 505-54-61</a>
+                </div>
+                <!-- /.top-header-wrapper -->
+            </div>
+            <!-- /.top-header -->
+        </div>
+
+        <div class="footer-header">
+            <div class="container">
+                <div class="footer-header-wrapper">
+                    <span class="logo">kugo</span>
+                    <button class="catalog" type="text">Каталог</button>
+                    <div class="search-wrapper">
+                        <input type="text" class="search" placeholder="Искать самокат KUGO">
+                        <button class="search-btn" type="submit"><img src="./img/icon/Search.svg" alt="поиск" width="16"
+                                height="16"></button>
+                    </div>
+                    <div class="favorites">
+                        <img src="./img/icon/balance.svg" alt="сравнить" width="20" height="20">
+                        <img src="./img/icon/Heart.svg" alt="избранное" width="20" height="20">
+                    </div>
+                    <div class="user-bascet">
+                        <img src="./img/icon/shopping-cart 2.svg" alt="Корзина" width="20" height="20">
+                        <button class="btn-bascet">Корзина</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.footer-header -->
+    </header>
+    <!-- /.header -->
+
+
+
     <script src="./js/main.js"></script>
 </body>
 
