addL lehend hero

--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
                                 height="16"></button>
                     </div>
                     <div class="favorites">
-                        <img src="./img/icon/balance.svg" alt="сравнить" width="20" height="20">
-                        <img src="./img/icon/Heart.svg" alt="избранное" width="20" height="20">
+                        <a href="#" class="header-favorites-link">
+                            <img src="./img/icon/balance.svg" alt="сравнить" width="20" height="20"
+                                class="header-favorites-link">
+                        </a>
+                        <a href="#" class="header-favorites-link">
+                            <img src="./img/icon/Heart.svg" alt="избранное" width="20" height="20"
+                                class="header-favorites-link">
+                        </a>
                     </div>
                     <div class="user-bascet">
                         <img src="./img/icon/shopping-cart 2.svg" alt="Корзина" width="20" height="20">
@@ -73,6 +79,34 @@
     </header>
     <!-- /.header -->
 
+    <section class="section-legend">
+        <div class="container">
+            <div class="legend-wrapper">
+                <address class="hero-address">
+                    <img src="./img/icon/geo.svg" alt="адрес" class="legend-image" width="15" height="15">
+                    Восточно-Кругликовская улица, 86 <span class="legend-work-hours">Вт - Сб 10:00 - 20:00</span>
+                </address>
+                <h1 class="legend-title">
+                    Запишитесь на бесплатный тест-драйв электросамокатов
+                </h1>
+                <p class="legend-text">
+                    в Москве без ограничения по времени
+                </p>
+                <div class="legend-strengths">
+                    <div class="legend-strengths">
+                        <img src="./img/icon/scooter.svg" alt="скутер" class="legend-icon">
+                        <span class="strengths-text">Поймете, какая модель вам подходит</span>
+                    </div>
+                    <div class="legend-strengths">
+                        <img src="./img/icon/energy-svgrepo.svg" alt="качество" class="legend-icon">
+                        <span class="strengths-text">Проверите лучшие самокаты в деле</span>
+                    </div>
+                </div>
+                <button class="btn btn-caling">Записаться</button>
+            </div>
+        </div>
+    </section>
+    <!-- /.section-hero -->
 
 
     <script src="./js/main.js"></script>
