--- a/index.html
+++ b/index.html
@@ -81,29 +81,7 @@
 
     <section class="section-legend">
         <div class="container">
-            <div class="legend-wrapper">
-                <address class="hero-address">
-                    <img src="./img/icon/geo.svg" alt="адрес" class="legend-image" width="15" height="15">
-                    Восточно-Кругликовская улица, 86 <span class="legend-work-hours">Вт - Сб 10:00 - 20:00</span>
-                </address>
-                <h1 class="legend-title">
-                    Запишитесь на бесплатный тест-драйв электросамокатов
-                </h1>
-                <p class="legend-text">
-                    в Москве без ограничения по времени
-                </p>
-                <div class="legend-strengths">
-                    <div class="legend-strengths">
-                        <img src="./img/icon/scooter.svg" alt="скутер" class="legend-icon">
-                        <span class="strengths-text">Поймете, какая модель вам подходит</span>
-                    </div>
-                    <div class="legend-strengths">
-                        <img src="./img/icon/energy-svgrepo.svg" alt="качество" class="legend-icon">
-                        <span class="strengths-text">Проверите лучшие самокаты в деле</span>
-                    </div>
-                </div>
-                <button class="btn btn-caling">Записаться</button>
-            </div>
+            <img src="./img/header-bg.jpg" alt="фон зфдний" width="100%" height="465">
         </div>
     </section>
     <!-- /.section-hero -->
