--- a/index.html
+++ b/index.html
@@ -79,9 +79,32 @@
     </header>
     <!-- /.header -->
 
-    <section class="section-legend">
-        <div class="container">
-            <img src="./img/header-bg.jpg" alt="фон зфдний" width="100%" height="465">
+    <section class="section section-hero">
+
+        <div class="hero-banner">
+            <div class="container">
+                <div class="hero-content">
+                    <div class="contacts-info">
+                        <img src="./img/icon/geo.svg" alt="адресс" width="12" height="15">
+                        <span class="address-schedule">Восточно-Кругликовская улица, 86</span>
+                        <span class="hours">Вт - Сб 10:00 - 20:00</span>
+                        <h1 class="hero-title">Запишитесь на&nbsp;бесплатный тест-драйв электросамокатов</h1>
+                        <p class="hero-descr">в Москве без ограничения по времени</p>
+                        <div class="hero-test-drive-wrapper">
+                            <div class="hero-test-drive">
+                                <img src="./img/icon/scooter.svg" alt="иконка скутера" class="hero-test-drive-img">
+                                <span class="hero-test-drive-descr">Поймете, какая модель вам подходит</span>
+                            </div>
+                            <div class="hero-test-drive">
+                                <img src="./img/icon/energy-svgrepo.svg" alt="иконка скутера"
+                                    class="hero-test-drive-img">
+                                <span class="hero-test-drive-descr">Проверите лучшие самокаты в деле</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-hero">Записаться</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- /.section-hero -->
