add: setion test drive

--- a/index.html
+++ b/index.html
@@ -110,6 +110,66 @@
     <!-- /.section-hero -->
 
 
+    <!-- START SECTION TEST-DRIVE -->
+    <section class=" section section-test-drive">
+        <div class="container-content">
+            <div class="test-drive-top-wrapper">
+                <div class="test-drive-content">
+                    <h2 class="title-test-drive">Определите максимально подходящую вам модель
+                        не&nbsp;теоретически, а&nbsp;на&nbsp;практике
+                    </h2>
+                    <h3 class="title-list">Тест-драйв поможет:</h3>
+                    <ul class="test-drive-list">
+                        <li class="test-drive-item"><span style="font-weight: 500;">Понять</span> подходит ли вам
+                            конкретная
+                            модель;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Испытать </span>самокат в «реальной
+                            жизни»;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Оценить</span> удобство хранения и
+                            эксплуатации;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Узнать</span> реальные
+                            характеристики и
+                            возможности модели.</li>
+                    </ul>
+                </div>
+                <div class="image-post-test-drive">
+                    <img src="./img/E-Scooters.jpg" alt="фото скутера" class="image-post-test-drive-photo">
+                </div>
+            </div>
+
+
+            <div class="test-drive-bottom-wrapper">
+                <div class="test-drive-bottom-content">
+                    <h2 class="title-test-drive">Научим правильной <br> и&nbsp;безопасной езде в&nbsp;городе <br> вас
+                        или
+                        вашего
+                        ребенка
+                    </h2>
+                    <h3 class="title-list">Тест-драйв поможет:</h3>
+                    <ul class="test-drive-list">
+                        <li class="test-drive-item"><span style="font-weight: 500;">Понять</span> подходит ли вам
+                            конкретная
+                            модель;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Испытать </span>самокат в «реальной
+                            жизни»;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Оценить</span> удобство хранения и
+                            эксплуатации;</li>
+                        <li class="test-drive-item"><span style="font-weight: 500;">Узнать</span> реальные
+                            характеристики и
+                            возможности модели.</li>
+                    </ul>
+                </div>
+                <div class="image-post-test-drive">
+                    <img src="./img/E-Scooters-gerl.jpg" alt="фото скутера" class="image-post-test-drive-photo">
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
+
+
     <script src="./js/main.js"></script>
 </body>
 
