add: section product

--- a/index.html
+++ b/index.html
@@ -145,28 +145,215 @@
                         вашего
                         ребенка
                     </h2>
-                    <h3 class="title-list">Тест-драйв поможет:</h3>
+                    <h3 class="title-list">На обучении специалист расскажет:</h3>
                     <ul class="test-drive-list">
-                        <li class="test-drive-item"><span style="font-weight: 500;">Понять</span> подходит ли вам
-                            конкретная
+                        <li class="test-drive-item">Как подготовить самокат к поездке;
                             модель;</li>
-                        <li class="test-drive-item"><span style="font-weight: 500;">Испытать </span>самокат в «реальной
-                            жизни»;</li>
-                        <li class="test-drive-item"><span style="font-weight: 500;">Оценить</span> удобство хранения и
-                            эксплуатации;</li>
-                        <li class="test-drive-item"><span style="font-weight: 500;">Узнать</span> реальные
-                            характеристики и
-                            возможности модели.</li>
+                        <li class="test-drive-item">Как «завести» самокат;</li>
+                        <li class="test-drive-item">Как вести себя во время поездки и обезопасить себя и окружающих;
+                        </li>
+                        <li class="test-drive-item">Как складывать и раскладывать электросамокат;</li>
+                        <li class="test-drive-item">Как ухаживать за своим девайсом.</li>
                     </ul>
                 </div>
                 <div class="image-post-test-drive">
                     <img src="./img/E-Scooters-gerl.jpg" alt="фото скутера" class="image-post-test-drive-photo">
                 </div>
             </div>
-
         </div>
+    </section>
 
+    <!-- START SECTION PRODUCT -->
+    <section class="section section-product">
+        <h2 class="title-product">Сейчас для тест-драйва и&nbsp;обучения <br> доступны следующие модели</h2>
+        <div class="container">
+            <div class="product-wrapper">
+                <div class="product-card">
+                    <div class="product-card-header">
+                        <span class="hin">ХИТ</span>
+                        <img src="./img/card/balance.svg" alt="сравнить" class="product-icon">
+                    </div>
+                    <div class="product-card-hero">
+                        <img src="./img/card/01.png" alt="Хит продаж" class="product-card-hero-image" width="242"
+                            height="200">
+                    </div>
+                    <h3 class="product-card-title">Kugoo Kirin M4</h3>
+                    <div class="product-attribute">
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/accumulator.svg" alt="заряд аккумулятора"
+                                    class="product-attribute-icon">
+                                2000 mAh
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/power.svg" alt="мощность" class="product-attribute-icon">
+                                1,2 л.с.
+                            </div>
+                        </div>
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/speedometer.svg" alt="скорость" class="product-attribute-icon">
+                                60 км/ч
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/timer.svg" alt="скорость" class="product-attribute-icon">
+                                5 часов
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-price-wrapper">
+                        <div class="product-price">
+                            <span class="old-price">39 900 ₽</span>
+                            <span class="price-product">39 900 ₽</span>
+                        </div>
+                        <div class="product-like">
+                            <img src="./img/card/shopping-cart.svg" alt="корзина добавить">
+                            <img src="./img/card/Heart.svg" alt="избраное добавить">
+                        </div>
+                    </div>
+                    <button class="btn btn-zapis">Записаться на тест-драйв</button>
+                </div>
 
+                <div class="product-card">
+                    <div class="product-card-header">
+                        <span class="hin new">Новинка</span>
+                        <img src="./img/card/balance.svg" alt="сравнить" class="product-icon">
+                    </div>
+                    <div class="product-card-hero">
+                        <img src="./img/card/01.png" alt="Хит продаж" class="product-card-hero-image" width="242"
+                            height="200">
+                    </div>
+                    <h3 class="product-card-title">Kugoo Kirin M4</h3>
+                    <div class="product-attribute">
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/accumulator.svg" alt="заряд аккумулятора"
+                                    class="product-attribute-icon">
+                                2000 mAh
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/power.svg" alt="мощность" class="product-attribute-icon">
+                                1,2 л.с.
+                            </div>
+                        </div>
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/speedometer.svg" alt="скорость" class="product-attribute-icon">
+                                60 км/ч
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/timer.svg" alt="скорость" class="product-attribute-icon">
+                                5 часов
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-price-wrapper">
+                        <div class="product-price">
+                            <span class="old-price">39 900 ₽</span>
+                            <span class="price-product">39 900 ₽</span>
+                        </div>
+                        <div class="product-like">
+                            <img src="./img/card/shopping-cart.svg" alt="корзина добавить">
+                            <img src="./img/card/Heart.svg" alt="избраное добавить">
+                        </div>
+                    </div>
+                    <button class="btn btn-zapis">Записаться на тест-драйв</button>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-card-header">
+                        <span class="hin">ХИТ</span>
+                        <img src="./img/card/balance.svg" alt="сравнить" class="product-icon">
+                    </div>
+                    <div class="product-card-hero">
+                        <img src="./img/card/01.png" alt="Хит продаж" class="product-card-hero-image" width="242"
+                            height="200">
+                    </div>
+                    <h3 class="product-card-title">Kugoo Kirin M4</h3>
+                    <div class="product-attribute">
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/accumulator.svg" alt="заряд аккумулятора"
+                                    class="product-attribute-icon">
+                                2000 mAh
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/power.svg" alt="мощность" class="product-attribute-icon">
+                                1,2 л.с.
+                            </div>
+                        </div>
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/speedometer.svg" alt="скорость" class="product-attribute-icon">
+                                60 км/ч
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/timer.svg" alt="скорость" class="product-attribute-icon">
+                                5 часов
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-price-wrapper">
+                        <div class="product-price">
+                            <span class="old-price">39 900 ₽</span>
+                            <span class="price-product">39 900 ₽</span>
+                        </div>
+                        <div class="product-like">
+                            <img src="./img/card/shopping-cart.svg" alt="корзина добавить">
+                            <img src="./img/card/Heart.svg" alt="избраное добавить">
+                        </div>
+                    </div>
+                    <button class="btn btn-zapis">Записаться на тест-драйв</button>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-card-header">
+                        <span class="hin new">Новинка</span>
+                        <img src="./img/card/balance.svg" alt="сравнить" class="product-icon">
+                    </div>
+                    <div class="product-card-hero">
+                        <img src="./img/card/01.png" alt="Хит продаж" class="product-card-hero-image" width="242"
+                            height="200">
+                    </div>
+                    <h3 class="product-card-title">Kugoo Kirin M4</h3>
+                    <div class="product-attribute">
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/accumulator.svg" alt="заряд аккумулятора"
+                                    class="product-attribute-icon">
+                                2000 mAh
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/power.svg" alt="мощность" class="product-attribute-icon">
+                                1,2 л.с.
+                            </div>
+                        </div>
+                        <div class="product-attribute-value">
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/speedometer.svg" alt="скорость" class="product-attribute-icon">
+                                60 км/ч
+                            </div>
+                            <div class="product-attribute-value-wrapper">
+                                <img src="./img/card/timer.svg" alt="скорость" class="product-attribute-icon">
+                                5 часов
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-price-wrapper">
+                        <div class="product-price">
+                            <span class="old-price">39 900 ₽</span>
+                            <span class="price-product">39 900 ₽</span>
+                        </div>
+                        <div class="product-like">
+                            <img src="./img/card/shopping-cart.svg" alt="корзина добавить">
+                            <img src="./img/card/Heart.svg" alt="избраное добавить">
+                        </div>
+                    </div>
+                    <button class="btn btn-zapis">Записаться на тест-драйв</button>
+                </div>
+
+            </div>
+        </div>
     </section>
 
 
